src/mail/snapshots/protonctl__mail__read__tests__imap_commands.snap
---
source: src/mail/read.rs
expression: sent.lock().unwrap().clone()
---
[
  "LOGIN \"user@example.test\" \"password\"",
  "LIST \"\" *",
  "EXAMINE \"Trash\"",
  "UID SEARCH ALL",
  "UID FETCH 3 (UID BODY.PEEK[HEADER.FIELDS (X-PM-INTERNAL-ID)])",
  "EXAMINE \"Spam\"",
  "UID SEARCH ALL",
  "EXAMINE \"All Mail\"",
  "UID SEARCH ALL",
  "UID FETCH 11,12,13,14,15 (UID INTERNALDATE)",
  "UID FETCH 11,12,13,14,15 (UID FLAGS INTERNALDATE BODY.PEEK[HEADER.FIELDS (FROM TO CC SUBJECT X-PM-INTERNAL-ID MESSAGE-ID IN-REPLY-TO REFERENCES X-PM-ORIGIN X-PM-CONTENT-ENCRYPTION X-ATTACHED)])",
  "EXAMINE \"Trash\"",
  "UID SEARCH ALL",
  "UID FETCH 3 (UID BODY.PEEK[HEADER.FIELDS (X-PM-INTERNAL-ID)])",
  "EXAMINE \"Spam\"",
  "UID SEARCH ALL",
  "EXAMINE \"All Mail\"",
  "UID SEARCH ALL",
  "UID FETCH 11,12,13,14,15 (UID INTERNALDATE)",
  "UID FETCH 11,12,13,14,15 (UID FLAGS INTERNALDATE BODY.PEEK[HEADER.FIELDS (FROM TO CC SUBJECT X-PM-INTERNAL-ID MESSAGE-ID IN-REPLY-TO REFERENCES X-PM-ORIGIN X-PM-CONTENT-ENCRYPTION X-ATTACHED)])",
  "EXAMINE \"All Mail\"",
  "UID SEARCH ALL",
  "UID FETCH 11,12,13,14,15 (UID INTERNALDATE)",
  "UID FETCH 11,12,13,14,15 (UID FLAGS INTERNALDATE BODY.PEEK[HEADER.FIELDS (FROM TO CC SUBJECT X-PM-INTERNAL-ID MESSAGE-ID IN-REPLY-TO REFERENCES X-PM-ORIGIN X-PM-CONTENT-ENCRYPTION X-ATTACHED CONTENT-TYPE CONTENT-TRANSFER-ENCODING)] BODY.PEEK[TEXT]<0.32768>)",
  "EXAMINE \"Trash\"",
  "UID SEARCH ALL",
  "UID FETCH 3 (UID BODY.PEEK[HEADER.FIELDS (X-PM-INTERNAL-ID)])",
  "EXAMINE \"Spam\"",
  "UID SEARCH ALL",
  "EXAMINE \"All Mail\"",
  "UID SEARCH ALL",
  "UID FETCH 11,12,13,14,15 (UID INTERNALDATE)",
  "UID FETCH 11,12,13,14,15 (UID BODY.PEEK[HEADER.FIELDS (FROM TO SUBJECT MESSAGE-ID X-PM-INTERNAL-ID X-ATTACHED)])",
  "EXAMINE \"All Mail\"",
  "UID FETCH 12 (UID FLAGS INTERNALDATE BODY.PEEK[])",
  "EXAMINE \"All Mail\"",
  "UID SEARCH OR OR HEADER Message-Id \"<m1@x.test>\" HEADER References \"<m1@x.test>\" HEADER In-Reply-To \"<m1@x.test>\"",
  "UID FETCH 11,12,13 (UID FLAGS INTERNALDATE BODY.PEEK[])",
  "STATUS \"INBOX\" (MESSAGES UNSEEN)",
  "STATUS \"Sent\" (MESSAGES UNSEEN)",
  "STATUS \"Drafts\" (MESSAGES UNSEEN)",
  "STATUS \"Archive\" (MESSAGES UNSEEN)",
  "STATUS \"Starred\" (MESSAGES UNSEEN)",
  "STATUS \"Spam\" (MESSAGES UNSEEN)",
  "STATUS \"Trash\" (MESSAGES UNSEEN)",
  "STATUS \"All Mail\" (MESSAGES UNSEEN)",
  "STATUS \"Folders\" (MESSAGES UNSEEN)",
  "STATUS \"Folders/Receipts\" (MESSAGES UNSEEN)",
  "STATUS \"Labels/Work\" (MESSAGES UNSEEN)"
]
